[package]
name = "card-roguelike-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# bevy-inspector-egui = "0.33.1"
# bevy_egui = "0.36.0"
# haalka = "0.5.1"

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
