[package]
name = "card-roguelike-prototype"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# commit = 07ea4a2c
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
tiny_bail = "0.5.0"
# bevy-inspector-egui = "0.33.1"
# bevy_egui = "0.36.0"
# haalka = "0.5.1"

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
